--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "fakerphp/faker": "^1.15",
         "friendsofphp/php-cs-fixer": "^2.16",
         "laravel/breeze": "^1.3",
+        "laravel/sail": "^1.10",
         "mockery/mockery": "^1.4",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.0"
